--- a/appsettings.json
+++ b/appsettings.json
@@ -11,3 +11,10 @@
         "DefaultConnection": "Server=DESKTOP-1Q0RMCE\\SQLEXPRESS;Database=NewNewsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     }
 }
+
+
+// secret set using the follwoing command on terminal:
+//dotnet user-secrets set "Authentication:Google:ClientId" "64122429837-cg3ovc3hausnq0db01o2dim7lmhd23h1.apps.googleusercontent.com"
+//dotnet user-secrets set "Authentication:Google:ClientSecret" "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"
+
+
